--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -64,3 +64,75 @@
         display: none;
     }
 }
+
+.app__navbar-menu {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--secondary-color);
+    svg {
+        width: 70px;
+        height: 70px;
+        color: var(--white-color);
+    }
+    div {
+        position: fixed;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 5;
+        padding: 1rem;
+        width: 80%;
+        height: 100vh;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+        align-items: flex-end;
+        background: url("../../assets/bgWhite.png");
+        background-size: cover;
+        background-color: var(--white-color);
+        background-repeat: repeat;
+        box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+        svg {
+            width: 35px;
+            height: 35px;
+            color: var(--secondary-color);
+            margin: 0.5rem 1rem;
+        }
+        ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex-direction: column;
+            li {
+                margin: 1rem;
+                a {
+                    color: var(--gray-color);
+                    text-decoration: none;
+                    font-size: 1rem;
+                    text-transform: uppercase;
+                    font-weight: 500;
+                    transition: all 0.3s ease-in-out;
+                    &:hover {
+                        color: var(--secondary-color);
+                    }
+                }
+            }
+        }
+        @media screen and(min-width:900px) {
+            display: none;
+        }
+    }
+    @media screen and(min-width:900px) {
+        display: none;
+    }
+}
