--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -36,6 +36,7 @@
 }
 
 .app__work-portfolio {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -58,6 +59,10 @@
             width: 470px;
             padding: 1.25rem;
             border-radius: 0.75rem;
+        }
+        @media screen and(max-width:900px) {
+            width: 230px;
+            margin: 1rem;
         }
         @media screen and(max-width:300px) {
             width: 100px;
