change favicon,change mobile,email phots,add testimonial to menu and NavigationDots

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -71,6 +71,7 @@
     border-radius: 50%;
     position: relative;
     display: flex;
+    cursor: pointer;
     justify-content: center;
     align-items: center;
     background: var(--secondary-color);
